--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^0.35.2",
     "@arco-design/web-vue": "^2.43.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/devtools": "^6.5.0",
     "electron": "^22.0.3",
     "electron-builder": "^23.6.0",
     "esbuild": "latest",
+    "eslint": "^8.34.0",
     "sass": "^1.58.1",
     "typescript": "^4.9.4",
     "vite": "^4.0.4",
@@ -33,5 +35,9 @@
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
     "vue-tsc": "^1.0.24"
+  },
+  "dependencies": {
+    "axios": "^1.3.3",
+    "socket.io-client": "^4.6.0"
   }
 }
