--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "^8.34.0",
     "sass": "^1.58.1",
     "typescript": "^4.9.4",
+    "unocss": "^0.49.7",
     "vite": "^4.0.4",
     "vite-plugin-electron": "^0.11.1",
     "vite-plugin-electron-renderer": "^0.11.4",
