--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   ],
   "scripts": {
     "dev": "vite | vue-devtools",
-    "build": "vue-tsc --noEmit && vite build && electron-builder",
+    "build": "vue-tsc --noEmit --skipLibCheck && vite build && electron-builder",
     "preview": "vite preview"
   },
   "devDependencies": {
