--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@arco-design/web-vue": "^2.43.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/devtools": "^6.5.0",
+    "@vueuse/core": "^9.13.0",
     "electron": "^22.0.3",
     "electron-builder": "^23.6.0",
     "esbuild": "latest",
     "eslint": "^8.34.0",
+    "pinia": "^2.0.32",
     "sass": "^1.58.1",
     "typescript": "^4.9.4",
     "unocss": "^0.49.7",
@@ -39,6 +41,7 @@
   },
   "dependencies": {
     "axios": "^1.3.3",
-    "socket.io-client": "^4.6.0"
+    "socket.io-client": "^4.6.0",
+    "trtc-electron-sdk": "^10.7.405"
   }
 }
